@@ -1,4 +1,10 @@
-﻿drkns 11.04.2015 23:04:41 +0200 - build 4341
+﻿drkns 12.04.2015 15:18:07 +0200 - build 4342
+
+1. С форума: падение при far /import
+
+2. Рефакторинг.
+
+drkns 11.04.2015 23:04:41 +0200 - build 4341
 
 1. Рефакторинг.
 
